Update User Registration
